--- a/GitOps/Jenkinsfile
+++ b/GitOps/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
         stage('Git: Code Checkout') {
             steps {
                 script{
-                    code_checkout("https://github.com/LondheShubham153/Wanderlust-Mega-Project.git","main")
+                    clone("https://github.com/LondheShubham153/Wanderlust-Mega-Project.git","main")
                 }
             }
         }
